+ fixed LobbyControllerTest and UserControllerTest